# quant-engine

./: .dockerignore  .env.example  .env.server.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.server  README.md  config.example.toml  deny.toml  docker-compose.server.yml
.github/workflows/: ci.yml  frontend.yml
crates/architecture/: Cargo.toml
crates/architecture/src/: lib.rs
crates/architecture/tests/: firewall.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: lib.rs  main.rs
crates/cli/src/jobs/: backtest.rs  datetime.rs  evolve.rs  features.rs  ingest.rs  metrics.rs  mod.rs  result.rs  train.rs
crates/cli/tests/: backtest_job.rs  dependency_topology.rs  evolve_job.rs  ingest_job.rs  slippage_parity.rs  train.rs  train_job.rs
crates/cli/tests/fixtures/: golden_result.json  sample_vintage.json
crates/cli/tests/fixtures/sample_store/: .gitignore  data.mdb
crates/clock/: Cargo.toml
crates/clock/src/: lib.rs  skew.rs
crates/clock/tests/: logging.rs
crates/config/: Cargo.toml
crates/config/src/: error.rs  lib.rs  schema.rs  universe.rs
crates/config/tests/: layering.rs  universe.rs
crates/determinism/: Cargo.toml
crates/determinism/src/: harness.rs  lib.rs  lineage.rs  rng.rs
crates/determinism/tests/: determinism.rs  permuted_parallelism.rs
crates/domain/: Cargo.toml
crates/domain/src/: bar.rs  funding.rs  instrument.rs  lib.rs  money.rs  resolution.rs  side.rs  time.rs  vintage.rs
crates/edge/: Cargo.toml
crates/edge/src/: classify.rs  edge.rs  lib.rs  shadow.rs  transport.rs
crates/ensemble/: Cargo.toml
crates/ensemble/src/: capacity.rs  de.rs  lib.rs  objective.rs  regime.rs  search.rs  stress.rs
crates/error/: Cargo.toml
crates/formula-pool/: Cargo.toml
crates/formula-pool/src/: governance_record.rs  lib.rs  lifecycle.rs
crates/gate/: Cargo.toml
crates/gate/src/: lib.rs
crates/hedger/: Cargo.toml
crates/hedger/src/: bootstrap.rs  classify.rs  cutover.rs  evaluator.rs  hedger.rs  lib.rs  live_breakers.rs  live_mark.rs  live_netter.rs  pretrade.rs  vintage_rollover.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: arrow.rs  backfill.rs  binance.rs  cache.rs  canonical.rs  checksum.rs  coalesce.rs  coverage.rs  derive.rs  downloader.rs  drift.rs  features.rs  fetch_all.rs  fetcher.rs  fill.rs  fuse.rs  integrity.rs  lib.rs  liquidity.rs  persist.rs  plan.rs  quality.rs  recon.rs  reconcile.rs  rest.rs  source.rs
crates/ingest/tests/: downloader.rs  features.rs  persist.rs  recon.rs
crates/ingest/tests/fixtures/binance_usdtm/: funding.json  klines_5m.json
crates/report/: Cargo.toml
crates/report/src/: lib.rs
crates/risk/: Cargo.toml
crates/risk/src/: breaker.rs  calibration.rs  gate.rs  kill.rs  lib.rs  limit.rs  shocks.rs  sizer.rs  slippage.rs
crates/run-protocol/: Cargo.toml
crates/run-protocol/src/: lib.rs
crates/run-protocol/tests/: agreement.rs
crates/runtime/: Cargo.toml
crates/runtime-core/: Cargo.toml
crates/runtime-core/src/: lib.rs
crates/runtime/src/: boot_state.rs  bootstrap.rs  classify.rs  cutover.rs  edge.rs  evaluator.rs  factor_join.rs  hedger.rs  kill_gate.rs  lib.rs  live_breakers.rs  live_kline.rs  live_mark.rs  live_netter.rs  pretrade.rs  reconciliation.rs  shadow.rs  transport.rs  vintage_rollover.rs
crates/runtime/tests/: breaker_seed.rs  classify_taxonomy.rs  cutover_breaker_wiring.rs  money_model_parity.rs  order_port_conformance.rs  restart_parity.rs
crates/server/: Cargo.toml
crates/server/src/: audit.rs  config.rs  lib.rs  main.rs  pool_seal.rs  pools.rs  read.rs
crates/server/src/auth/: google.rs  mod.rs  session.rs
crates/server/src/runs/: api.rs  manager.rs  mod.rs  model.rs  spawn.rs  steer.rs  store.rs
crates/server/static/: index.html
crates/server/tests/: audit_governance.rs  auth.rs  hardening.rs  http.rs  pools.rs  read.rs  regenerate_fixture.rs  runs.rs
crates/server/tests/common/: mod.rs
crates/server/tests/fixtures/: sample_vintage.json
crates/signal/: Cargo.toml
crates/signal/src/: feature.rs  genome.rs  lib.rs  reconstruct.rs  regime.rs
crates/signal/src/indicator/: expr.rs  flow.rs  mod.rs  price.rs  quant.rs  roll.rs
crates/signal/tests/: qe451_expr_slow_reference_oracle.rs
crates/storage/: Cargo.toml
crates/storage/src/: coverage.rs  engine.rs  key.rs  lib.rs  provenance.rs  records.rs  store.rs  synthetic.rs
crates/storage/tests/: store.rs  synthetic.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/validation/: Cargo.toml
crates/validation/src/: basis.rs  dsr.rs  ic.rs  lib.rs  nulls.rs  pbo.rs  spa.rs  stats.rs  steer.rs
crates/venue/: Cargo.toml
crates/venue/src/: cache.rs  classify.rs  clock.rs  lib.rs  ratelimit.rs  registry.rs  rest.rs  stream.rs  userdata.rs  ws.rs
crates/vintage/: Cargo.toml
crates/vintage/src/: lib.rs  schema.rs
crates/wfo/: Cargo.toml
crates/wfo/src/: archive.rs  backtest.rs  cv.rs  cv_fitness.rs  fitness.rs  friction.rs  kelly.rs  lib.rs  lifecycle.rs  mapelites.rs  operator.rs  regularise.rs  robustness.rs  strategy_repo.rs  thompson.rs  variation.rs  walkforward.rs
crates/wfo/src/gp/: archive.rs  deflation.rs  descriptor.rs  freeze.rs  gates.rs  mod.rs  variation.rs
crates/wfo/tests/: qe432_slow_reference_oracle.rs
docs/: backlog.md  current-state.html  specs.md
docs/architecture/: ARCHITECTURE.md  admin-ui-decisions.md  index.html  qe-001-cargo-workspace-topology-design.md  qe-002-config-system-design.md  qe-003-tracing-design.md  qe-004-error-model-design.md  qe-005-ci-pipeline-design.md  qe-006-determinism-harness-design.md  qe-007-shared-domain-types-design.md  qe-008-clock-skew-guard-design.md  qe-009-risk-kill-switch-contract-design.md  qe-010-lmdb-market-store-design.md  qe-011-lmdb-synthetic-store-design.md  qe-012-instrument-universe-design.md  qe-013-local-run-packaging-design.md  qe-101-binance-dumps-downloader-design.md  qe-102-rest-backfill-client-design.md  (+130 more)
docs/deploy/: README.md
web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+384 files in other folders)
