[workspace]
resolver = "2"
members = ["crates/*"]
# Lint-proof fixture crate (deliberately contains an `unwrap()` in a deny(unwrap_used) module);
# excluded so it is not built by the workspace — only invoked via `cargo clippy` from a test.
exclude = ["crates/error/tests/fixtures/hotpath_violation"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "proprietary"
rust-version = "1.96"
repository = "https://github.com/aoimasu/quant-engine"
# Internal crates — never published. Also lets cargo-deny's licence check skip them
# (their non-SPDX `license = "proprietary"` would otherwise fail the audit).
publish = false

[workspace.dependencies]
# Shared third-party versions; member crates opt in with `dep.workspace = true`.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
figment = { version = "0.10", features = ["toml", "env"] }
sha2 = "0.10"
thiserror = "2"
# Deterministic RNG (QE-006): ChaCha8 has no machine-dependent state → portable, reproducible streams.
rand_core = "0.9"
rand_chacha = "0.9"
# Data-parallel runtime; a dev-dependency of qe-determinism (proving thread-count independence).
rayon = "1"
# Fixed-point decimal money (QE-007): exact arithmetic, no binary float. String serde for exactness.
rust_decimal = { version = "1", features = ["serde", "serde-with-str"] }
# Embedded typed LMDB key-value store (QE-010 market data, QE-011 synthetic cache).
# default-features off drops the unmaintained `bincode` (RUSTSEC-2025-0141) pulled by the default
# serde-bincode codec; we only use the serde-json value codec (enabled per-crate).
heed = { version = "0.20", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
# Property-based testing (QE-007 money laws); used only as a dev-dependency.
proptest = "1"
# Temp directories for storage tests; dev-dependency only.
tempfile = "3"

# Internal crates (path deps) — referenced by member crates as `qe-domain.workspace = true`.
qe-domain = { path = "crates/domain" }
qe-error = { path = "crates/error" }
qe-config = { path = "crates/config" }
qe-determinism = { path = "crates/determinism" }
qe-clock = { path = "crates/clock" }
qe-risk = { path = "crates/risk" }
qe-telemetry = { path = "crates/telemetry" }
qe-signal = { path = "crates/signal" }
qe-storage = { path = "crates/storage" }
qe-ingest = { path = "crates/ingest" }
qe-wfo = { path = "crates/wfo" }
qe-ensemble = { path = "crates/ensemble" }
qe-venue = { path = "crates/venue" }
qe-runtime = { path = "crates/runtime" }
qe-vintage = { path = "crates/vintage" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
