[workspace]
resolver = "2"
members = ["crates/*"]
# Lint-proof fixture crate (deliberately contains an `unwrap()` in a deny(unwrap_used) module);
# excluded so it is not built by the workspace — only invoked via `cargo clippy` from a test.
exclude = ["crates/error/tests/fixtures/hotpath_violation"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "proprietary"
rust-version = "1.96"
repository = "https://github.com/aoimasu/quant-engine"
# Internal crates — never published. Also lets cargo-deny's licence check skip them
# (their non-SPDX `license = "proprietary"` would otherwise fail the audit).
publish = false

[workspace.dependencies]
# Shared third-party versions; member crates opt in with `dep.workspace = true`.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
figment = { version = "0.10", features = ["toml", "env"] }
sha2 = "0.10"
thiserror = "2"
# Deterministic RNG (QE-006): ChaCha8 has no machine-dependent state → portable, reproducible streams.
rand_core = "0.9"
rand_chacha = "0.9"
# Data-parallel runtime; a dev-dependency of qe-determinism (proving thread-count independence).
rayon = "1"
# Fixed-point decimal money (QE-007): exact arithmetic, no binary float. String serde for exactness.
rust_decimal = { version = "1", features = ["serde", "serde-with-str"] }
# Embedded typed LMDB key-value store (QE-010 market data, QE-011 synthetic cache).
# default-features off drops the unmaintained `bincode` (RUSTSEC-2025-0141) pulled by the default
# serde-bincode codec; we only use the serde-json value codec (enabled per-crate).
heed = { version = "0.20", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
# Property-based testing (QE-007 money laws); used only as a dev-dependency.
proptest = "1"
# Temp directories for storage tests; dev-dependency only.
tempfile = "3"
# Admin-UI backend (QE-254, ADR D4a): async web stack, isolated to the `qe-server` composition root.
# `axum` default features cover routing + JSON; `tokio` gets only the multi-thread runtime + macros +
# net it needs; `tower-http/fs` provides static-asset serving (`ServeDir`/`ServeFile`).
axum = "0.8"
# QE-255 adds subprocess supervision (`process`), async line-tailing of child stdout (`io-util`),
# the bounded worker-pool semaphore + index mutex (`sync`), and bounded test polling (`time`). QE-407
# adds `signal` for the graceful-shutdown handler (`ctrl_c` + unix `SIGTERM`); it pulls only
# `signal-hook-registry`, already in `Cargo.lock`, so `cargo deny check` stays green.
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "process",
    "io-util",
    "signal",
    "sync",
    "time",
] }
# `fs` serves static assets (`ServeDir`/`ServeFile`); `trace` provides the QE-413 per-request
# `TraceLayer`; `request-id` provides `SetRequestIdLayer`/`MakeRequestUuid`/`PropagateRequestIdLayer`.
tower-http = { version = "0.6", features = ["fs", "trace", "request-id"] }
# Opaque run identifiers (QE-255, ADR D4b). v4 = random (no wall-clock in the id); MIT/Apache-2.0,
# pulls only the already-present `getrandom` — `cargo deny check` stays green.
uuid = { version = "1", features = ["v4"] }
# QE-256 auth: HMAC-SHA256 session-cookie signing (`hmac` + the existing `sha2`), URL-safe base64 for
# the cookie payload/MAC, and `url` to build the Google authorization redirect. All MIT/Apache-2.0
# (RustCrypto) and `base64`/`url` are already in `Cargo.lock`; `cargo deny check` stays green.
hmac = "0.12"
base64 = "0.22"
url = "2"
# `tower::ServiceExt::oneshot` drives the router in-process for the async integration test (dev-only).
tower = { version = "0.5", features = ["util"] }

# Internal crates (path deps) — referenced by member crates as `qe-domain.workspace = true`.
# QE-406: the dependency-free run-protocol leaf (serde only) shared by `qe-cli` (emit) and `qe-server`
# (parse). A pure leaf → no firewall edge; `cargo deny` adds no new external crate.
qe-run-protocol = { path = "crates/run-protocol" }
qe-domain = { path = "crates/domain" }
qe-error = { path = "crates/error" }
qe-config = { path = "crates/config" }
qe-determinism = { path = "crates/determinism" }
qe-clock = { path = "crates/clock" }
qe-risk = { path = "crates/risk" }
qe-telemetry = { path = "crates/telemetry" }
qe-signal = { path = "crates/signal" }
qe-storage = { path = "crates/storage" }
qe-ingest = { path = "crates/ingest" }
qe-wfo = { path = "crates/wfo" }
qe-ensemble = { path = "crates/ensemble" }
qe-venue = { path = "crates/venue" }
qe-runtime = { path = "crates/runtime" }
qe-vintage = { path = "crates/vintage" }
qe-validation = { path = "crates/validation" }
qe-report = { path = "crates/report" }
qe-gate = { path = "crates/gate" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# QE-267: enforce the no-bare-`unwrap` convention as a compile-time invariant on the production panic
# path. `unwrap_used` is a clippy `restriction` lint (not in `all`); `allow-unwrap-in-tests = true` in
# `clippy.toml` exempts `#[cfg(test)]` modules. `expect_used` is deliberately left off (see QE-268).
unwrap_used = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
