[package]
name = "qe-architecture"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

# No internal dependencies by design (QE-132): the firewall guard reads the workspace manifests with
# `std` only, so it cannot itself perturb the dependency graph it checks.
[dependencies]
