[package]
name = "qe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
# Default-off: the real Binance market-data decoders / live `HistoricalSource` for `qe ingest` live
# behind this feature (QE-253 ships only the scaffold + in-memory-tested job). Future work fills it in.
http = []

# The user-facing binary is `qe` (the package/lib is `qe-cli`/`qe_cli`); the Dockerfile and docs
# invoke `qe`.
[[bin]]
name = "qe"
path = "src/main.rs"

[dependencies]
# QE-413: initialise the tracing subscriber in `main` so the job pipeline's spans are recorded, and
# emit top-level stage spans. Firewall-legal — `qe-cli` is a composition root; both are leaf/shared.
qe-telemetry.workspace = true
tracing.workspace = true
qe-config.workspace = true
qe-determinism.workspace = true
qe-domain.workspace = true
qe-signal.workspace = true
qe-storage.workspace = true
qe-ingest.workspace = true
qe-wfo.workspace = true
qe-ensemble.workspace = true
qe-validation.workspace = true
qe-gate.workspace = true
qe-risk.workspace = true
qe-venue.workspace = true
qe-runtime.workspace = true
qe-vintage.workspace = true
# QE-406: the shared run protocol — the `ProgressLine` emit types + the `emit_*` writers live here now
# (re-exported from `jobs`), so the server parses exactly what this binary emits.
qe-run-protocol.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
