[package]
name = "qe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
# Default-off: the real Binance USDT-M market-data decoder + live `HistoricalSource` for `qe ingest`
# (QE-463) live behind this feature; it forwards to `qe-ingest/http` (the `ureq` transport). The
# default build — and CI — stays offline. Wiring the CLI command/trigger to it is QE-464.
http = ["qe-ingest/http"]

# The user-facing binary is `qe` (the package/lib is `qe-cli`/`qe_cli`); the Dockerfile and docs
# invoke `qe`.
[[bin]]
name = "qe"
path = "src/main.rs"

[dependencies]
# QE-413: initialise the tracing subscriber in `main` so the job pipeline's spans are recorded, and
# emit top-level stage spans. Firewall-legal — `qe-cli` is a composition root; both are leaf/shared.
qe-telemetry.workspace = true
tracing.workspace = true
qe-config.workspace = true
qe-determinism.workspace = true
qe-domain.workspace = true
qe-signal.workspace = true
qe-storage.workspace = true
qe-ingest.workspace = true
qe-wfo.workspace = true
qe-ensemble.workspace = true
qe-validation.workspace = true
qe-gate.workspace = true
qe-risk.workspace = true
qe-venue.workspace = true
qe-runtime.workspace = true
qe-vintage.workspace = true
# QE-452 Phase A: the frozen formula-pool artefact the `evolve` job seals (a pure serde leaf; the CLI is
# the composition root that maps the merged QE-451 GP engine's frozen formulas + deflation report into it).
qe-formula-pool.workspace = true
# QE-406: the shared run protocol — the `ProgressLine` emit types + the `emit_*` writers live here now
# (re-exported from `jobs`), so the server parses exactly what this binary emits.
qe-run-protocol.workspace = true
rust_decimal.workspace = true
# QE synthetic-ingest: the `RngCore::next_u64` trait to draw from the deterministic `DetRng`
# (`qe-determinism`) when generating offline synthetic bars. A tiny trait crate already in the tree.
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
