[package]
name = "qe-config"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
qe-domain.workspace = true
serde.workspace = true
serde_json.workspace = true
figment.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
