[package]
name = "qe-config"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# No internal-crate deps yet. QE-007/QE-012 will reintroduce qe-domain once config references
# shared newtypes (instrument/resolution), which will also tighten validation.
serde.workspace = true
serde_json.workspace = true
figment.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
