[package]
name = "qe-config"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# QE-012 reintroduces qe-domain: the universe references shared newtypes (InstrumentId/Timestamp)
# so config-resolved instruments are validated against the same vocabulary the engine uses.
qe-domain = { path = "../domain" }
serde.workspace = true
serde_json.workspace = true
figment.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
