[package]
name = "qe-determinism"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# QE-002: lineage folds in the resolved config's content hash.
qe-config.workspace = true
rand_core.workspace = true
rand_chacha.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Used only to prove the determinism contract at 1 vs N threads; the library has no parallel runtime.
rayon.workspace = true
