[package]
name = "qe-determinism"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# QE-002: lineage folds in the resolved config's content hash.
qe-config.workspace = true
rand_core.workspace = true
rand_chacha.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Used only to prove the determinism contract at 1 vs N threads; the library has no parallel runtime.
rayon.workspace = true
# QE-445 (test-only): the permuted-parallelism determinism test drives a REAL stochastic parallel stage
# — a MAP-Elites generation from `qe-wfo` — under 1 vs N rayon threads and asserts byte-identical
# artefacts. These are dev-deps only; the firewall ignores dev-dependencies, and the cycle
# `qe-determinism --dev--> qe-wfo --> qe-determinism` is permitted because it passes through a dev edge.
qe-wfo.workspace = true
qe-signal.workspace = true
qe-domain.workspace = true
