[package]
name = "qe-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
rust_decimal.workspace = true

[dev-dependencies]
serde_json.workspace = true
proptest.workspace = true
