[package]
name = "qe-risk"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
qe-domain.workspace = true
qe-error.workspace = true
rust_decimal.workspace = true
serde.workspace = true
thiserror.workspace = true
# QE-431: canonical-JSON content hashing of the slippage calibration (mirrors Lineage::id / Vintage).
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true
