[package]
name = "qe-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# QE-426: `qe-runtime` is now a thin FACADE. It re-exports the full prior public API from the three split
# crates so every downstream `use qe_runtime::X` keeps compiling unchanged.
qe-runtime-core.workspace = true
qe-hedger.workspace = true
qe-edge.workspace = true
# The QE-009 kill contract types re-exported as `qe_runtime::{KillHandle, KillSwitch}` (pre-split surface).
qe-risk.workspace = true

[dev-dependencies]
# The retained integration tests (breaker_seed, restart_parity, order_port_conformance, classify_taxonomy)
# drive the split crates through the facade and construct their inputs directly from these crates.
# QE-435: the money-model parity test links the training money model (`qe-wfo` friction) against the live
# fill model (`qe-edge` plan_delta/VenueSimulator). This is a **dev-dependency**, so the search⟂portfolio⟂live
# firewall parser (which excludes every dev-dependency form) does not see a `qe-runtime → qe-wfo` edge, and
# `runtime → wfo` is the allowed downstream direction (live reading a training output) regardless.
qe-wfo.workspace = true
qe-domain.workspace = true
qe-error.workspace = true
qe-signal.workspace = true
qe-vintage.workspace = true
qe-determinism.workspace = true
qe-venue.workspace = true
rust_decimal.workspace = true
