[package]
name = "qe-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

# The admin-UI backend binary (QE-254). A second composition root (ADR D4a): axum + tokio, async
# isolated to this crate; the firewall/decoupling guards forbid any `qe-runtime`/`qe-venue` edge.
[[bin]]
name = "qe-server"
path = "src/main.rs"

[dependencies]
# Shared internal crate: structured startup logging (also the real internal edge the firewall sanity
# checks). No `qe-runtime`/`qe-venue` — see the QE-132 firewall + QE-001 decoupling guards.
qe-telemetry.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tower.workspace = true
tempfile.workspace = true
